messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels:
    app: messaging-app
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      tier: web
  template:
    metadata:
      labels:
        app: messaging-app
        tier: web
    spec:
      containers:
        - name: messaging-app
          image: ghcr.io/bini34/messaging-app:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    tier: web
  ports:
    - name: http
      port: 8000
      targetPort: 8000
