messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-active
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    color: blue
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-preview
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    color: green
  ports:
    - name: http
      port: 8000
      targetPort: 8000
