messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-app-active
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-app-active
                port:
                  number: 8000
